--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="styles/index.processed.css">
 </head>
 <body>
-<h1> Hello World
+<h1> Good Afternoon/Morning
  </h1>
-  <h2 title"Good? Bad?"> How are you doing </h2>
+  <h2 title"Good? Bad?">-Cheese- </h2>
   <p> Do you like cheese? If yes how about Brie?</p>
   
   
