--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
  </h1>
   <h2 title"Good? Bad?">-Cheese- </h2>
   <p> Do you like cheese? If yes how about Brie?</p>
+  <p> I enjoy having cheese when it is half melted over cheese </p>
   
   
   <!--
