--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   
   <!--  Meta  -->
   <meta charset="UTF-8" />
-  <title>My New Pen!</title>
+  <title>-Cheese</title>
   
   <!--  Styles  -->
   <link rel="stylesheet" href="styles/index.processed.css">
 </head>
 <body>
-<h1> Good Afternoon/Morning
+<h1> Prefrences
  </h1>
   <h2 title"Good? Bad?">-Cheese- </h2>
   <p> Do you like cheese? If yes how about Brie?</p>
