--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <h2 title"Good? Bad?">-Cheese- </h2>
   <p> Do you like cheese? If yes how about Brie?</p>
   <p> I enjoy having cheese when it is half melted over cheese </p>
-  <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Brie_01.jpg/1200px-Brie_01.jpg" alt="cheese" width="500" width="365">
-  
-  
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Brie_01.jpg/1200px-Brie_01.jpg" alt="Cheese" width="500" height="333"> 
   <!--
 
     Wow! What do you want to build?
