--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <!--  Meta  -->
   <meta charset="UTF-8" />
-  <title>-Cheese</title>
+  <title>-Cheese-</title>
   
   <!--  Styles  -->
   <link rel="stylesheet" href="styles/index.processed.css">
